--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -917,17 +917,17 @@
                                                 <th>GP Name</th>
                                                 <td style="font-size: small">{{fund.firm.firmName}}</td>
                                                 <th>Strategy AUM (mln)</th>
-                                                <td style="font-size: small">{{fund.firm.firmName}}</td>
+                                                <td style="font-size: small">{{fund.firm.aum | number:'1.0-0'}}</td>
                                                 <th>Locations</th>
-                                                <td style="font-size: small">{{fund.firm.firmName}}</td>
+                                                <td style="font-size: small">{{fund.firm.locations}}</td>
                                             </tr>
                                             <tr>
                                                 <th>Firm Inception</th>
-                                                <td style="font-size: small">{{fund.firm.firmName}}</td>
+                                                <td style="font-size: small">{{fund.firm.foundedYear}}</td>
                                                 <th>Inv. + Oper. Team</th>
-                                                <td style="font-size: small">{{fund.firm.firmName}}</td>
+                                                <td style="font-size: small">{{fund.firm.invTeamSize}} + {{fund.firm.invTeamSize}}</td>
                                                 <th>Peers</th>
-                                                <td style="font-size: small">{{fund.firm.firmName}}</td>
+                                                <td style="font-size: small">{{fund.firm.peers}}</td>
                                             </tr>
                                         </table>
                                         <br>
