--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -925,7 +925,7 @@
                                                 <th>Firm Inception</th>
                                                 <td style="font-size: small">{{fund.firm.foundedYear}}</td>
                                                 <th>Inv. + Oper. Team</th>
-                                                <td style="font-size: small">{{fund.firm.invTeamSize}} + {{fund.firm.invTeamSize}}</td>
+                                                <td style="font-size: small">{{fund.firm.invTeamSize}} + {{fund.firm.opsTeamSize}}</td>
                                                 <th>Peers</th>
                                                 <td style="font-size: small">{{fund.firm.peers}}</td>
                                             </tr>
