--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -930,6 +930,37 @@
                                                 <td style="font-size: small">{{fund.firm.peers}}</td>
                                             </tr>
                                         </table>
+                                        <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
+                                            <tr>
+                                                <th>Fund Summary</th>
+                                            </tr>
+                                        </table>
+                                        <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
+                                            <tr>
+                                                <th>Target Fund Size (mln)</th>
+                                                <td style="font-size: small">{{fund.firm.firmName}}</td>
+                                                <th>Mgt. fee</th>
+                                                <td style="font-size: small">{{fund.firm.aum | number:'1.0-0'}}</td>
+                                                <th>Industry</th>
+                                                <td style="font-size: small">{{fund.firm.locations}}</td>
+                                            </tr>
+                                            <tr>
+                                                <th>Hard cap (mln)</th>
+                                                <td style="font-size: small">{{fund.firm.foundedYear}}</td>
+                                                <th>Carry</th>
+                                                <td style="font-size: small">{{fund.firm.invTeamSize}} + {{fund.firm.opsTeamSize}}</td>
+                                                <th>Strategy</th>
+                                                <td style="font-size: small">{{fund.firm.peers}}</td>
+                                            </tr>
+                                            <tr>
+                                                <th>GP Commitment</th>
+                                                <td style="font-size: small">{{fund.firm.foundedYear}}</td>
+                                                <th>Hurdle</th>
+                                                <td style="font-size: small">{{fund.firm.invTeamSize}} + {{fund.firm.opsTeamSize}}</td>
+                                                <th>Geography</th>
+                                                <td style="font-size: small">{{fund.firm.peers}}</td>
+                                            </tr>
+                                        </table>
                                         <br>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
