--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -954,9 +954,9 @@
                                             </tr>
                                             <tr>
                                                 <th>GP Commitment</th>
-                                                <td style="font-size: small">{{fund.fundName}}</td>
+                                                <td style="font-size: small">{{fund.gpCommitment}}%</td>
                                                 <th>Hurdle</th>
-                                                <td style="font-size: small">{{fund.fundName}}</td>
+                                                <td style="font-size: small">{{fund.hurdleRate}}%</td>
                                                 <th>Geography</th>
                                                 <td style="font-size: small">{{fund.fundName}}</td>
                                             </tr>
