--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -942,7 +942,7 @@
                                                 <th>Mgt. fee</th>
                                                 <td style="font-size: small">{{fund.managementFee}}%</td>
                                                 <th>Industry</th>
-                                                <td style="font-size: small">{{fund.fundName}}</td>
+                                                <td style="font-size: small">{{fund.industry}}</td>
                                             </tr>
                                             <tr>
                                                 <th>Hard cap (mln)</th>
@@ -950,7 +950,7 @@
                                                 <th>Carry</th>
                                                 <td style="font-size: small">{{fund.carriedInterest}}%</td>
                                                 <th>Strategy</th>
-                                                <td style="font-size: small">{{fund.fundName}}</td>
+                                                <td style="font-size: small">{{fund.strategy}}</td>
                                             </tr>
                                             <tr>
                                                 <th>GP Commitment</th>
@@ -958,7 +958,7 @@
                                                 <th>Hurdle</th>
                                                 <td style="font-size: small">{{fund.hurdleRate}}%</td>
                                                 <th>Geography</th>
-                                                <td style="font-size: small">{{fund.fundName}}</td>
+                                                <td style="font-size: small">{{fund.geography}}</td>
                                             </tr>
                                         </table>
                                         <br>
