--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -909,7 +909,7 @@
                                         <br>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
-                                                <th bgcolor="#00FF00">Organization Overview</th>
+                                                <th bgcolor="#00cc00">Organization Overview</th>
                                             </tr>
                                         </table>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
@@ -932,7 +932,7 @@
                                         </table>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
-                                                <th bgcolor="#00FF00">Fund Summary</th>
+                                                <th bgcolor="#00cc00">Fund Summary</th>
                                             </tr>
                                         </table>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
