--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -942,11 +942,7 @@
                                                 <th>Mgt. fee</th>
                                                 <td style="font-size: small">{{fund.managementFee}}%</td>
                                                 <th>Industry</th>
-                                                <td style="font-size: small">
-                                                    <div *ngFor="let item of fund.industry">
-                                                        {{item.nameEn}}
-                                                    </div>
-                                                </td>
+                                                <td style="font-size: small">{{this.industryAsString}}</td>
                                             </tr>
                                             <tr>
                                                 <th>Hard cap (mln)</th>
@@ -954,7 +950,7 @@
                                                 <th>Carry</th>
                                                 <td style="font-size: small">{{fund.carriedInterest}}%</td>
                                                 <th>Strategy</th>
-                                                <td style="font-size: small">{{fund.strategy}}</td>
+                                                <td style="font-size: small">{{fund.strategyAsString}}</td>
                                             </tr>
                                             <tr>
                                                 <th>GP Commitment</th>
@@ -962,7 +958,7 @@
                                                 <th>Hurdle</th>
                                                 <td style="font-size: small">{{fund.hurdleRate}}%</td>
                                                 <th>Geography</th>
-                                                <td style="font-size: small">{{fund.geography}}</td>
+                                                <td style="font-size: small">{{fund.geographyAsString}}</td>
                                             </tr>
                                         </table>
                                         <br>
