--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -950,7 +950,7 @@
                                                 <th>Carry</th>
                                                 <td style="font-size: small">{{fund.carriedInterest}}%</td>
                                                 <th>Strategy</th>
-                                                <td style="font-size: small">{{fund.strategyAsString}}</td>
+                                                <td style="font-size: small">{{this.strategyAsString}}</td>
                                             </tr>
                                             <tr>
                                                 <th>GP Commitment</th>
@@ -958,7 +958,7 @@
                                                 <th>Hurdle</th>
                                                 <td style="font-size: small">{{fund.hurdleRate}}%</td>
                                                 <th>Geography</th>
-                                                <td style="font-size: small">{{fund.geographyAsString}}</td>
+                                                <td style="font-size: small">{{this.geographyAsString}}</td>
                                             </tr>
                                         </table>
                                         <br>
