--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -961,6 +961,23 @@
                                                 <td style="font-size: small">{{this.geographyAsString}}</td>
                                             </tr>
                                         </table>
+                                        <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
+                                            <tr>
+                                                <th bgcolor="#00cc00">Key fund statistics</th>
+                                            </tr>
+                                        </table>
+
+
+
+
+
+
+
+
+
+
+
+
                                         <br>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
