--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -966,7 +966,7 @@
                                                 <th bgcolor="#00cc00">Key fund statistics</th>
                                             </tr>
                                             <tr>
-                                                <th align="center">{{fund.firm.firmName}} Investment Performance Data as of {{fund.asOfDateOnePager}} (mln)</th>
+                                                <th style="text-align: center">{{fund.firm.firmName}} Investment Performance Data as of {{fund.asOfDateOnePager}} (mln)</th>
                                             </tr>
                                         </table>
 
