--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -969,7 +969,21 @@
                                                 <th style="text-align: center">{{fund.firm.firmName}} Investment Performance Data as of {{fund.asOfDateOnePager}} (mln)</th>
                                             </tr>
                                         </table>
-
+                                        <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
+                                            <tr>
+                                                <th></th>
+                                                <th>Vintage</th>
+                                                <th># of Inv.</th>
+                                                <th>Fund Size</th>
+                                                <th>Invested</th>
+                                                <th>Realized</th>
+                                                <th>Unrealized</th>
+                                                <th>Gross MOIC</th>
+                                                <th>Gross IRR</th>
+                                                <th>Net MOIC</th>
+                                                <th>Net IRR</th>
+                                            </tr>
+                                        </table>
 
 
 
