--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -983,6 +983,19 @@
                                                 <th>Net MOIC</th>
                                                 <th>Net IRR</th>
                                             </tr>
+                                            <tr *ngFor="let item of this.firmFunds" [hidden]="item.doNotDisplayInOnePager">
+                                                <td>{{item.fundName}}</td>
+                                                <td>{{item.vintage}}</td>
+                                                <td>{{item.numberOfInvestments}}</td>
+                                                <td>{{item.fundSize | number:'1.0-0'}}</td>
+                                                <td>{{item.invested | number:'1.0-0'}}</td>
+                                                <td>{{item.realized | number:'1.0-0'}}</td>
+                                                <td>{{item.unrealized | number:'1.0-0'}}</td>
+                                                <td>{{item.grossTvpi | number:'1.1-1'}}x</td>
+                                                <td>{{item.grossIrr | number:'1.0-0'}}%</td>
+                                                <td>{{item.netTvpi | number:'1.1-1'}}x</td>
+                                                <td>{{item.netIrr | number:'1.0-0'}}%</td>
+                                            </tr>
                                         </table>
 
 
