--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -988,7 +988,7 @@
                                                 <td>{{item.vintage}}</td>
                                                 <td>{{item.numberOfInvestments}}</td>
                                                 <td>{{item.fundSize | number:'1.0-0'}}</td>
-                                                <td>{{item.invested | number:'1.0-0'}}</td>
+                                                <td>{{item.investedAmount | number:'1.0-0'}}</td>
                                                 <td>{{item.realized | number:'1.0-0'}}</td>
                                                 <td>{{item.unrealized | number:'1.0-0'}}</td>
                                                 <td>{{item.grossTvpi | number:'1.1-1'}}x</td>
