--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -996,6 +996,19 @@
                                                 <td>{{item.netTvpi | number:'1.1-1'}}x</td>
                                                 <td>{{item.netIrr | number:'1.0-0'}}%</td>
                                             </tr>
+                                            <tr>
+                                                <th>Total</th>
+                                                <th></th>
+                                                <th># of Inv.</th>
+                                                <th>Fund Size</th>
+                                                <th>Invested</th>
+                                                <th>Realized</th>
+                                                <th>Unrealized</th>
+                                                <th>Gross MOIC</th>
+                                                <th>Gross IRR</th>
+                                                <th>Net MOIC</th>
+                                                <th>Net IRR</th>
+                                            </tr>
                                         </table>
 
 
