--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -1436,10 +1436,19 @@
                                             </div>
                                         </table>
 
-                                        <div class="pull-right">
-                                            <button type="submit" class="btn btn-success" (click)="saveDataAndCreateOnePager()" [disabled]="fund.id == 0 || fund.id == null">CREATE</button>
-                                        </div>
+
                                     </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-8">
+                                        fsdfasf sf sdf sdf dsf sd fd asd ds sd ds dsa sd f sdf sd dsa dsa adsf sdf a fasd sd fds fd fdsa fd sda fds fd af sd fsd
+                                    </div>
+                                    <div class="col-md-4">
+                                        NJKFDS K FDS KJDS KFDS FJKDS FHKDS FHJKDSFH DSK FKHJDSF sd dsa dsa adsf sdf a fasd sd fds fd fdsa fd sda fds fd af sd fsd
+                                    </div>
+                                </div>
+                                <div class="pull-right">
+                                    <button type="submit" class="btn btn-success" (click)="saveDataAndCreateOnePager()" [disabled]="fund.id == 0 || fund.id == null">CREATE</button>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12">
